# sherlock

./: .deepsource.toml  .dockerignore  .editorconfig  .env  .gitignore  .gitpod.yml  .replit  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  Computer Forensics  Dockerfile  Hello.txt  Instagram password  LICENSE  Pipfile  Python product  README.md  Rickyniepoetter  Stack.txt  Type 1  Xxx  _iiraaiidee_  abcd...  add_site.sh  code.msi  codebeaver.yml  data.json  data.py  data_bad_site.json  docker-compose.yml  don313.  fake_user_response.html  false_positive_exclusions.txt  file1.md  heartmakingbypython.py  install_packages.sh  issue-1965-fix.txt  linearsearch.py  (+37 more)
.actor/: Dockerfile  README.md  actor.json  actor.sh  dataset_schema.json  input_schema.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  false-negative.yml  false-positive.yml  feature-request.md  feature-request.yml  question.md  reporting-false-negative.md  reporting-false-positive.md  site-request.yml  site-support-request.md  suggest-an-idea-for-this-project.md
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  django.yml  docker-build.yml  exclusions.yml  format.yml  main.yml  nightly-online.yml  nightly.yml  package.yml  publish-dockerhub.yml  pull_request.yml  regression.yml  run_tests.yml  sherlock_test.yml  update-site-list.yml  validate_modified_targets.yml
.sherlock/: Dockerfile  sherlock.py  sherlock.py.save  sites.yaml
Facebook.Com/: rosemariepahayo1
Ludo-Python-game--master/: Instructions.docx  Ludo-game.py  Ludo.py
api/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
api/src/: index.ts  types.ts
api/src/middleware/: apiKey.ts  rateLimit.ts
api/src/routes/: health.ts  search.ts  sites.ts  version.ts
api/src/utils/: bridge.ts  sites.ts
devel/: site-list.py  summarize_site_validation.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  README.md @Spepd  README_zh.md  Sonia valdes  install.md  removed-sites.md  sites.md
docs/examples/: risk.json
docs/images/: Lessie Ann heerah
docs/pyproj/: README.md
docs/pyproject/: README.md
languages/: pt-br.md  repositorios.txt
models/: _base.py  _exceptions.py  _exmaple.py  _requests.py  _responses.py
sherlock/: __init__.py  __main__.py  __main__.py~  __version__.py  _sherlock.py  _sherlock_main.py  config.json  constants.py  data.json  data.py  exception.py  find.py  gui.py  intohtml.py  load_proxies.py  log.py  module_name.py  notify.py  open_urls.py  opensites.py  req_json.py  requirements.txt  result.py  service.py  sherlock.py  sherlock_main.py  sherlockdata.py  sherlockdata.py~  sherlockfinder.py  sherlockio.py  sherlocklog.py  sherlocklog.py~  sherlockservice.py  sherlockservice.py~  site_list.py  sites.py  timeoutadapter.py  watson.py
sherlock-test/: test_data.py  test_log.py  test_service.py  test_sherlockdata.py  test_sherlocklog.py
sherlock-test/exception/: test_SLException.py  test_SLUnsupportedTypeException.py
sherlock-web/: docker-compose.yml
sherlock-web/api/: Dockerfile  main.py
sherlock-web/frontend/: Dockerfile  data.json  package-lock.json  package.json  tsconfig.json
sherlock-web/frontend/app/: global.css  global.d.ts  layout.tsx  page.tsx
sherlock-web/frontend/app/api/submit/: route.ts
sherlock-web/frontend/app/components/: form.tsx  siteCheckbox.tsx
sherlock/controllers/: __init__.py  sherlock.py  sherlock_get_response.py  sherlock_interpolate_string.py  sherlock_run.py
sherlock/core/: __init__.py  data.py  log.py  service.py
sherlock/exception/: __init__.py  sldataexception.py  slexception.py  slunsupportedtypeexception.py
sherlock/models/: notify.py  sites.py
sherlock/modules/: README.MD
sherlock/resources/: .data.json.swp  data.json  data.schema.json  standart-prefixes.txt  standart-suffixes.txt  test_data.json
sherlock/sherlock/: __init__.py  sherlock.py  sherlock_check_for_parameter.py  sherlock_future_session.py  sherlock_handler.py  sherlock_multiple_usernames.py  sherlock_timeout_check.py
sherlock/tests/: .excluded_sites  all.py  base.py  release.py  test_multiple_usernames.py
sherlock_project/: __init__.py  __main__.py  ai_analysis.py  async_engine.py  cache.py  cache_cli.py  notify.py  result.py  sherlock.py  sites.py  tempCodeRunnerFile.py  validation.py  waf_check.py  web.py  web_ui.py
sherlock_project/resources/: data.json  data.schema.json
sherlock_project/risk/: __init__.py  analyzer.py  types.py
sherlock_project/templates/: index.html
sherlock_project/utils/: __init__.py  cli.py  http.py  output.py  sites.py  text.py  version.py
sherlock_project/workers/: search.py
sherlock_test/: framework.py
sherlock_test/core/: test_data.py  test_log.py  test_service.py
spectre/: __init__.py  __main__.py  notify.py  result.py  sites.py  spectre.py
spectre/resources/: data.json
spectre/tests/: __init__.py  all.py  base.py  test_multiple_usernames.py
test/: __init__.py  test_system.py
tests/: __init__.py  all.py  base.py  comprehensive_validation.py  conftest.py  few_test_basic.py  sherlock_interactives.py  test_cache.py  test_cli_risk_flag.py  test_codementor.py  test_giphy_blocking.py  test_manifest.py  test_multiple_usernames.py  test_new_sites_presence.py  test_notify_comprehensive.py  test_probes.py  test_result_comprehensive.py  test_risk_analyzer.py  test_robustness.py  test_sherlock.py  test_sites_comprehensive.py  test_unicode.py  test_ux.py  test_validate_targets.py  test_version.py  test_waf_check.py
tests/mocks/: global_waf_detect.yaml
website/: README.md  index.html  result.html
website/css/: main.css
website/js/: darkmode.js  downloadtxt.js  index.js  result.js
