[build-system]
requires = ["pdm-backend>=2.4.8"]
build-backend = "pdm.backend"

[tool.pdm.version]
path = "sherlock_project/__init__.py"

[project]
name = "sherlock-project"
dynamic = ["version"]
description = "Hunt down social media accounts by username across social networks"
license = {text="MIT"}
authors = [
    { name="Siddharth Dushantha", email="siddharth.dushantha@gmail.com" }
]
maintainers = [
    { name="Paul Pfeister", email="code@pfeister.dev" },
    { name="Matheus Felipe", email="matheusfelipeog@protonmail.com" },
    { name="Sondre Karlsen Dyrnes", email="sondre@villdyr.no" }
]
readme = "docs/pyproject/README.md"
keywords = [ "osint", "reconnaissance", "information gathering" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security"
]
requires-python = ">=3.9"
dependencies = [
    "certifi >=2019.6.16",
    "colorama >=0.4.1",
    "PySocks >=1.7.0",
    "requests >=2.22.0",
    "requests-futures >=1.0.0",
    "stem >=1.8.0",
    "pandas >=2.2.1",
    "openpyxl >=3.0.10",
]

[project.urls]
homepage = "https://sherlockproject.xyz/"
repository = "https://github.com/sherlock-project/sherlock"
"Bug Tracker" = "https://github.com/sherlock-project/sherlock/issues"

[dependency-groups]
dev = [
    "jsonschema >=4.0.0",
    "rstr >=3.2.2",
    "pytest >=8.4.2",
    "pytest-xdist >=3.8.0"
]
ci = [
    "defusedxml >=0.7.1"
]

[project.scripts]
sherlock = 'sherlock_project.sherlock:main'
